<resources>
	<string name="app_name">Weather</string>
	<string name="action_settings">Settings</string>
	<string name="add_city">Add City</string>
	<string name="confirm">Confirm</string>
	<string name="cancel">Cancel</string>
	<string name="city">City: %s</string>
	<string name="description">Description: %s</string>
	<string name="latLng">Lat: %.0f, Long: %.0f</string>
	<string name="temperature">Temperature: %s</string>
	<string name="humidity">Humidity: %s</string>
	<string name="title_activity_city">CityActivity</string>
	<string name="main">Main</string>
	<string name="windSpeed">Wind Speed: %.0f</string>
	<string name="date">Date: %s</string>
</resources>
