<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	app:cardCornerRadius="6dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="8dp">

		<TextView
			android:id="@+id/txt_cityName"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/city"
			android:textColor="@color/blue"
			android:textSize="16dp" />

		<TextView
			android:id="@+id/txt_description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/description"
			android:textSize="16dp" />

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ImageView
				android:id="@+id/img_weather"
				android:layout_width="70dp"
				android:layout_height="70dp"
				android:layout_alignParentLeft="true" />

			<TextView
				android:id="@+id/txt_temp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_marginLeft="4dp"
				android:layout_toRightOf="@id/img_weather"
				android:text="@string/temperature"
				android:textSize="16dp" />
		</RelativeLayout>

		<TextView
			android:id="@+id/txt_humidity"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/humidity"
			android:textColor="@color/colorAccent"
			android:textSize="16dp" />
</LinearLayout>

</androidx.cardview.widget.CardView>